# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
include/: newtype.h
include/GLFW/: glfw3native.h
src/: main.cpp  newtype.cppm  triangle.glsl  triangle.shader
